--- a/src/components/StartPage/StartPage.scss
+++ b/src/components/StartPage/StartPage.scss
@@ -64,7 +64,7 @@
     background-image: none;
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0.3);
+      background-color: var(--color-hover);
 
       transition: all 0.5s ease;
 
