--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,8 @@
   --color-primary-2: #a1a1e4;
   --color-black: #000000;
   --color-white: #ffffff;
+
+  --color-hover: rgba(255, 255, 255, 0.3);
 }
 
 html {
