--- a/src/components/StartPage/StartPage.scss
+++ b/src/components/StartPage/StartPage.scss
@@ -4,31 +4,87 @@
   justify-content: center;
   align-items: center;
 
-  width: 50%;
   height: 100vh;
 
   margin: 0 auto;
 
+  @media only screen and (min-width: 320px) {
+    width: 300px;
+  }
+
+  @media only screen and (min-width: 375px) {
+    width: 355px;
+  }
+
+  @media only screen and (min-width: 425px) {
+    width: 405px;
+  }
+
+  @media only screen and (min-width: 768px) {
+    width: 500px;
+  }
+
   &__title {
     display: block;
 
-    font-size: 40px;
-    line-height: 46px;
     font-weight: 400;
     text-align: center;
     color: var(--color-white);
+
+    @media only screen and (min-width: 320px) {
+      font-size: 20px;
+      line-height: 26px;
+    }
+
+    @media only screen and (min-width: 375px) {
+      font-size: 22px;
+    }
+
+    @media only screen and (min-width: 425px) {
+      font-size: 24px;
+      line-height: 30px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      font-size: 40px;
+      line-height: 46px;
+    }
   }
 
   &__info {
     display: block;
 
-    margin-top: 25px;
-
-    font-size: 28px;
-    line-height: 36px;
     font-weight: 300;
-    text-align: justify;
+
     color: var(--color-white);
+
+    @media only screen and (min-width: 320px) {
+      margin-top: 10px;
+
+      font-size: 18px;
+      line-height: 26px;
+      text-align: center;
+    }
+
+    @media only screen and (min-width: 375px) {
+      margin-top: 15px;
+
+      font-size: 20px;
+    }
+
+    @media only screen and (min-width: 425px) {
+      margin-top: 20px;
+
+      font-size: 22px;
+      line-height: 28px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      margin-top: 25px;
+
+      font-size: 28px;
+      line-height: 36px;
+    }
   }
 
   &__buttons {
@@ -38,7 +94,21 @@
 
     width: 100%;
 
-    margin-top: 50px;
+    @media only screen and (min-width: 320px) {
+      margin-top: 15px;
+    }
+
+    @media only screen and (min-width: 375px) {
+      margin-top: 20px;
+    }
+
+    @media only screen and (min-width: 425px) {
+      margin-top: 30px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      margin-top: 50px;
+    }
   }
 
   &__button {
@@ -46,11 +116,7 @@
     justify-content: center;
     flex-grow: 1;
 
-    margin-right: 25px;
-    padding: 15px 0;
 
-    font-size: 22px;
-    line-height: 28px;
     font-weight: 400;
 
     color: var(--color-white);
@@ -62,6 +128,29 @@
     transition: all 0.5s ease;
 
     background-image: none;
+
+    @media only screen and (min-width: 320px) {
+      margin-right: 5px;
+      padding: 15px 0;
+
+      font-size: 18px;
+      line-height: 24px;
+    }
+
+    @media only screen and (min-width: 375px) {
+      font-size: 20px;
+    }
+
+    @media only screen and (min-width: 425px) {
+      font-size: 22px;
+    }
+
+    @media only screen and (min-width: 768px) {
+      margin-right: 25px;
+      padding: 15px 0;
+
+      line-height: 28px;
+    }
 
     &:hover {
       background-color: var(--color-hover);
